making tweaks and adding first test
